Updated microservice structure, added graphical tools, added EVL
