# microservices/order-management/src/main/java/uk/ac/york/eng2/orders/resources/OrdersController.java
@@ -1,7 +1,6 @@
 package uk.ac.york.eng2.orders.resources;
 
 import io.micronaut.core.annotation.NonNull;
-import io.micronaut.http.HttpHeaders;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.*;
@@ -16,13 +15,12 @@ import uk.ac.york.eng2.orders.domain.Orders;
 import uk.ac.york.eng2.orders.dto.OrdersCreateDTO;
 import uk.ac.york.eng2.orders.events.OrdersCreated;
 import uk.ac.york.eng2.orders.events.OrdersProducer;
+import uk.ac.york.eng2.orders.gateways.OrderPriceResponse;
 import uk.ac.york.eng2.orders.gateways.PMProductPricingGateway;
-import uk.ac.york.eng2.orders.gateways.ProductPricingInfo;
 import uk.ac.york.eng2.orders.repository.CustomerRepository;
 import uk.ac.york.eng2.orders.repository.OrderItemRepository;
 import uk.ac.york.eng2.orders.repository.OrdersRepository;
 
-import java.math.BigDecimal;
 import java.net.URI;
 import java.time.LocalDate;
 import java.util.*;
@@ -56,6 +54,13 @@ public class OrdersController {
 
     @Post
     public HttpResponse<Void> createOrders(@Body OrdersCreateDTO dto){
+
+        Optional<OrderPriceResponse> orderPriceResponse = pmProductPricingGateway.getOrderPrice(dto.getOrderItems());
+
+        if (orderPriceResponse.isEmpty()) {
+            throw new HttpStatusException(HttpStatus.NOT_FOUND, "Item prices not found");
+        }
+
         Orders orders = new Orders();
         orders.setDateCreated(LocalDate.now());
         orders.setAddress(dto.getAddress());
@@ -66,36 +71,24 @@ public class OrdersController {
                         new HttpStatusException(HttpStatus.NOT_FOUND, "Customer not found")
                 ));
 
-        orders.setTotalAmount(BigDecimal.ZERO);
+        orders.setTotalAmount(orderPriceResponse.get().orderTotal());
         orders = ordersRepository.save(orders);
 
 
-        BigDecimal orderTotal = BigDecimal.ZERO;
         HashMap<Long, Integer> items = new HashMap<>();
         for (Map.Entry<Long, Integer> entry : dto.getOrderItems().entrySet()) {
             Long productId = entry.getKey();
             int quantity = entry.getValue();
 
-            Optional<ProductPricingInfo> priceInfo = pmProductPricingGateway.getProductPrice(productId);
-
-            if (priceInfo.isEmpty()) {
-                throw new HttpStatusException(HttpStatus.NOT_FOUND, "Product not found");
-            }
-
-            BigDecimal unitPrice = priceInfo.get().price;
-
             OrderItem item = new OrderItem();
             item.setProductId(productId);
             item.setQuantity(quantity);
-            item.setUnitPrice(unitPrice);
+            item.setUnitPrice(orderPriceResponse.get().itemPrices().get(productId));
             item.setOrder(orders);
             orderItemRepository.save(item);
             items.put(productId, quantity);
-
-            orderTotal = orderTotal.add(unitPrice.multiply(BigDecimal.valueOf(quantity)));
         }
 
-        orders.setTotalAmount(orderTotal);
         orders = ordersRepository.update(orders);
 
         ordersProducer.orderCreated(new OrdersCreated(orders.getDateCreated(), items));
@@ -121,6 +114,11 @@ public class OrdersController {
             throw new HttpStatusException(HttpStatus.NOT_FOUND, "Order not found");
         }
 
+        Optional<OrderPriceResponse> orderPriceResponse = pmProductPricingGateway.getOrderPrice(dto.getOrderItems());
+        if (orderPriceResponse.isEmpty()) {
+            throw new HttpStatusException(HttpStatus.NOT_FOUND, "Item prices not found");
+        }
+
         Orders orders = oOrders.get();
         orders.setAddress(dto.getAddress());
         orders.setPaid(dto.isPaid());
@@ -130,37 +128,24 @@ public class OrdersController {
                 new HttpStatusException(HttpStatus.NOT_FOUND, "Customer not found")
         ));
 
-        orders.setTotalAmount(BigDecimal.ZERO);
+        orders.setTotalAmount(orderPriceResponse.get().orderTotal());
         orders = ordersRepository.save(orders);
 
 
-        BigDecimal orderTotal = BigDecimal.ZERO;
         HashMap<Long, Integer> items = new HashMap<>();
-        orderItemRepository.deleteByOrderId(id);
         for (Map.Entry<Long, Integer> entry : dto.getOrderItems().entrySet()) {
             Long productId = entry.getKey();
             int quantity = entry.getValue();
 
-            Optional<ProductPricingInfo> priceInfo = pmProductPricingGateway.getProductPrice(productId);
-
-            if (priceInfo.isEmpty()) {
-                throw new HttpStatusException(HttpStatus.NOT_FOUND, "Product not found");
-            }
-
-            BigDecimal unitPrice = priceInfo.get().price;
-
             OrderItem item = new OrderItem();
             item.setProductId(productId);
             item.setQuantity(quantity);
-            item.setUnitPrice(unitPrice);
+            item.setUnitPrice(orderPriceResponse.get().itemPrices().get(productId));
             item.setOrder(orders);
             orderItemRepository.save(item);
             items.put(productId, quantity);
-
-            orderTotal = orderTotal.add(unitPrice.multiply(BigDecimal.valueOf(quantity)));
         }
 
-        orders.setTotalAmount(orderTotal);
         orders = ordersRepository.update(orders);
 
         ordersProducer.orderCreated(new OrdersCreated(orders.getDateCreated(), items));
